feat: increase test coverage to 75%+ across microservices including controllers