@@ -1,10 +1,11 @@
 package com.wallet.transaction.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.wallet.transaction.dto.PaymentRequest;
+import com.wallet.transaction.dto.RefundRequest;
 import com.wallet.transaction.dto.TopupRequest;
 import com.wallet.transaction.dto.TransactionResponse;
 import com.wallet.transaction.dto.TransferRequest;
-import com.wallet.transaction.entity.Transaction;
 import com.wallet.transaction.entity.TransactionStatus;
 import com.wallet.transaction.entity.TransactionType;
 import com.wallet.transaction.service.TransactionService;
@@ -17,131 +18,127 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.Collections;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(value = TransactionController.class, properties = {
-        "spring.cloud.config.enabled=false",
-        "spring.cloud.config.import-check.enabled=false",
-        "spring.cloud.config.fail-fast=false",
-        "spring.config.import=optional:configserver:",
-        "eureka.client.enabled=false"
-})
+@WebMvcTest(TransactionController.class)
 class TransactionControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
     @MockBean
     private TransactionService transactionService;
 
+    @Autowired
+    private ObjectMapper objectMapper;
+
     @Test
-    void topup_withValidPayload_returnsResponse() throws Exception {
-        Transaction tx = new Transaction();
-        tx.setId(1L);
-        tx.setUserId(7L);
-        tx.setSenderId(0L);
-        tx.setReceiverId(7L);
-        tx.setAmount(new BigDecimal("120.00"));
-        tx.setType(TransactionType.TOPUP);
-        tx.setStatus(TransactionStatus.SUCCESS);
-        tx.setCreatedAt(LocalDateTime.now());
+    void topup_returnsTransactionResponse() throws Exception {
+        TopupRequest req = new TopupRequest(1L, new BigDecimal("100.00"), "idemp-1");
+        TransactionResponse resp = new TransactionResponse(1L, 1L, 0L, 1L, new BigDecimal("100.00"), TransactionType.TOPUP, TransactionStatus.SUCCESS, "idemp-1", LocalDateTime.now());
+        when(transactionService.topup(any())).thenReturn(resp);
 
-        when(transactionService.topup(any(TopupRequest.class))).thenReturn(TransactionResponse.from(tx));
-
-        TopupRequest request = new TopupRequest(7L, new BigDecimal("120.00"), "idem-1");
         mockMvc.perform(post("/transactions/topup")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1L))
                 .andExpect(jsonPath("$.status").value("SUCCESS"));
     }
 
     @Test
-    void topup_withInvalidPayload_returnsBadRequest() throws Exception {
-        TopupRequest request = new TopupRequest(null, new BigDecimal("0"), "");
+    void transfer_returnsTransactionResponse() throws Exception {
+        TransferRequest req = new TransferRequest(1L, 2L, new BigDecimal("50.00"), "idemp-2");
+        TransactionResponse resp = new TransactionResponse(2L, 1L, 1L, 2L, new BigDecimal("50.00"), TransactionType.TRANSFER, TransactionStatus.SUCCESS, "idemp-2", LocalDateTime.now());
+        when(transactionService.transfer(any())).thenReturn(resp);
 
-        mockMvc.perform(post("/transactions/topup")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isBadRequest());
+        mockMvc.perform(post("/transactions/transfer")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(req)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(2));
     }
 
     @Test
-    void transfer_whenServiceReturnsResult_returnsOk() throws Exception {
-        Transaction tx = new Transaction();
-        tx.setId(2L);
-        tx.setUserId(1L);
-        tx.setSenderId(1L);
-        tx.setReceiverId(2L);
-        tx.setAmount(new BigDecimal("20.00"));
-        tx.setType(TransactionType.TRANSFER);
-        tx.setStatus(TransactionStatus.SUCCESS);
-        when(transactionService.transfer(any(TransferRequest.class))).thenReturn(TransactionResponse.from(tx));
+    void payment_returnsTransactionResponse() throws Exception {
+        PaymentRequest req = new PaymentRequest(1L, 3L, new BigDecimal("20.00"), "idemp-3");
+        TransactionResponse resp = new TransactionResponse(3L, 1L, 1L, 3L, new BigDecimal("20.00"), TransactionType.PAYMENT, TransactionStatus.SUCCESS, "idemp-3", LocalDateTime.now());
+        when(transactionService.payment(any())).thenReturn(resp);
 
-        mockMvc.perform(post("/transactions/transfer")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(new TransferRequest(1L, 2L, new BigDecimal("20.00"), "idem-t"))))
+        mockMvc.perform(post("/transactions/payment")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.type").value("TRANSFER"));
+                .andExpect(jsonPath("$.amount").value(20.00));
+    }
+
+    @Test
+    void refund_returnsTransactionResponse() throws Exception {
+        RefundRequest req = new RefundRequest(1L, 2L, new BigDecimal("10.00"), 3L, "idemp-refund");
+        TransactionResponse resp = new TransactionResponse(4L, 2L, 2L, 1L, new BigDecimal("10.00"), TransactionType.REFUND, TransactionStatus.SUCCESS, "idemp-refund", LocalDateTime.now());
+        when(transactionService.refund(any())).thenReturn(resp);
+
+        mockMvc.perform(post("/transactions/refund")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(req)))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void getById_returnsResponse() throws Exception {
+        TransactionResponse resp = new TransactionResponse(10L, 1L, 1L, 3L, new BigDecimal("15.00"), TransactionType.PAYMENT, TransactionStatus.SUCCESS, "key-10", LocalDateTime.now());
+        when(transactionService.getById(10L)).thenReturn(resp);
+
+        mockMvc.perform(get("/transactions/id/10"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(10));
     }
 
     @Test
     void getByUser_returnsList() throws Exception {
-        Transaction tx = new Transaction();
-        tx.setId(3L);
-        tx.setUserId(7L);
-        tx.setSenderId(0L);
-        tx.setReceiverId(7L);
-        tx.setAmount(new BigDecimal("10.00"));
-        tx.setType(TransactionType.TOPUP);
-        tx.setStatus(TransactionStatus.SUCCESS);
-        when(transactionService.getByUser(7L)).thenReturn(List.of(TransactionResponse.from(tx)));
+        when(transactionService.getByUser(1L)).thenReturn(Collections.emptyList());
 
-        mockMvc.perform(get("/transactions/user/7"))
+        mockMvc.perform(get("/transactions/user/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(3L));
+                .andExpect(jsonPath("$").isArray());
     }
 
     @Test
-    void statement_withCsvFormat_returnsCsvHeaders() throws Exception {
-        when(transactionService.buildStatementCsv(any(Long.class), any(LocalDateTime.class), any(LocalDateTime.class)))
-                .thenReturn("a,b\n1,2".getBytes());
+    void getHistory_returnsList() throws Exception {
+        String from = "2023-01-01T00:00:00";
+        String to = "2023-01-02T00:00:00";
+        when(transactionService.getHistory(any(), any())).thenReturn(Collections.emptyList());
+
+        mockMvc.perform(get("/transactions/history")
+                .param("from", from)
+                .param("to", to))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void receipt_returnsPdf() throws Exception {
+        when(transactionService.buildReceiptPdf(1L)).thenReturn("PDF-CONTENT".getBytes());
+
+        mockMvc.perform(get("/transactions/1/receipt"))
+                .andExpect(status().isOk())
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void statement_returnsCsv() throws Exception {
+        when(transactionService.buildStatementCsv(any(), any(), any())).thenReturn("CSV-CONTENT".getBytes());
 
         mockMvc.perform(get("/transactions/statement")
-                        .param("userId", "7")
-                        .param("from", "2025-01-01T00:00:00")
-                        .param("to", "2025-01-02T00:00:00")
-                        .param("format", "CSV"))
-                .andExpect(status().isOk())
-                .andExpect(header().string("Content-Disposition", "attachment; filename=statement-7.csv"))
-                .andExpect(content().contentType("text/csv"));
-    }
-
-    @Test
-    void receipt_returnsPdfHeaders() throws Exception {
-        when(transactionService.buildReceiptPdf(9L)).thenReturn("receipt".getBytes());
-
-        mockMvc.perform(get("/transactions/9/receipt"))
-                .andExpect(status().isOk())
-                .andExpect(header().string("Content-Disposition", "attachment; filename=receipt-9.pdf"))
-                .andExpect(content().contentType(MediaType.APPLICATION_PDF));
+                .param("userId", "1")
+                .param("from", "2023-01-01T00:00:00")
+                .param("to", "2023-01-02T00:00:00")
+                .param("format", "CSV"))
+                .andExpect(status().isOk());
     }
 }
-
-
-
-
-
